Добавлена поддержка слотов

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Debug/
 /ipch/STORMLIB_VS15-7c58fc56/STORMLIBRUS-96410536.ipch
 MapConfigData.VC.db
 GeneratedFiles/
+/MapConfigData/uislots.cpp~RF1dc8ba7b.TMP
